2008-10-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkStatusIcon.t
	* xs/GtkStatusIcon.xs
	* xs/GtkTreeDnd.xs
	* xs/GtkTreeView.xs
	* xs/GtkTreeViewColumn.xs: Fix stack handling bugs in
	Gtk2::StatusIcon::position_menu,
	Gtk2::TreeDragSource::drag_data_get,
	Gtk2::TreeView::get_tooltip_context, and
	Gtk2::TreeViewColumn::cell_get_size.  Patch by Kevin Ryde.

	* xs/GdkGC.xs
	* xs/GtkGC.xs: Document the hash structure used to represent
	GdkGCValues.  Patch by Kevin Ryde.

	* xs/GtkObject.xs (gtk2perl_new_gtkobject): Make the debugging
	code cope with NULL objects.

	* t/GtkAction.t
	* xs/GtkAction.xs: Don't sink the widgets returned by
	gtk_action_get_proxies.  This fixes the problems with using
	Gtk2::Action::get_proxies in the "connect-proxy" signal.  Patch by
	Kevin Ryde.

	* api.pod (Memory Handling): Explain the lifespan issues
	associated with Glib::Boxed.  Patch by Kevin Ryde.

	* xs/GtkWidget.xs: Mention that the objects returned by
	requisition() and allocation() are only valid as long as the
	widget lives (unless they are copied).

2008-10-05  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* xs/GdkRgb.xs (SvImageDataPointer): Add a return statement even
	if it cannot be reached, to hush compiler warnings.

	* t/version-checks.t: Use -init instead of -threads-init in the
	version check tests to avoid issues on systems with a glib without
	thread support.

	* t/GtkTreeView.t: Skip the set_search_equal_func() test when gtk+
	< 2.10 since the test uses and needs set_search_entry().  Fix the
	skip count for the set_search_position_func() test.

	* t/00.Gtk2.t: Print version information to aid in debugging test
	failure reports.

2008-09-20  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Gtk2.pm
	* Makefile.PL
	* NEWS
	* README: Stable release 1.200.

2008-09-20  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* api.pod: Improve the explanation of callbacks and user data.
	Patch by Kevin Ryde.

2008-09-16  Torsten Schoenfeld  <kaffeetisch@gmx.de>
